# Gogobot-edu-sdk

./: README.md  README.zh_CN.md  SDK_OPTIMIZATION_REVIEW.md  __init__.py  pyproject.toml
aidog_sdk/: __init__.py  _ble.py  actions.py  dev_pc_ws.py  dog.py
demo/: demo_1_performance.py  demo_2_custom_action.py  demo_3_reactive_companion.py
docs/: action_parameter_types.md  api_reference.md  connection_ble.md  demo_videos.md  dev_pc_websocket.md  examples.md  firmware_compatibility.md  protocol_ble.md  quick_start.en.md  quick_start.zh_CN.md  safety.md  troubleshooting.md
docs/assets/demos/: README.md
examples/: 01_connect.py  02_actions.py  03_movement.py  04_audio_ws_bidirectional_host.py  05_imu_read.py  06_tof_read.py  07_Servo_Control.py  08_sensor_ws_lan.py  README.md
examples/01_connection/: connect_by_address.py  scan_and_connect.py
examples/02_actions/: basic_actions.py  choreography.py  ears_expressions_audio.py
examples/03_movement/: directional_move.py  timed_move.py
examples/04_sensors/: imu_ble_read.py  imu_read.py  imu_ws_lan_read.py  sensor_ws_lan.py  tof_ble_read.py  tof_read.py  tof_ws_lan_read.py
examples/05_audio/: bidirectional_pcm_ws_host.py
examples/06_robot_adjust/: custom_action.py  safe_pose_adjust.py
tools/: set_dev_pc_ws_ip_ble.py  set_volume.py
