[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aidog-sdk"
version = "0.1.0"
description = "Python SDK for the Changba AI-Dog robot — BLE control library"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.21",
]

[project.optional-dependencies]
dev = ["pytest"]
bidir_audio = ["websockets", "sounddevice", "numpy"]
dev_pc_ws = ["websockets"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aidog_sdk*"]
